// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Badge Snapshot - all sizes 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-xs flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-2.5 w-2.5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all sizes 2`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-xs flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-3 w-3"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all sizes 3`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all sizes 4`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-md flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-6 w-6"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all variants 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all variants 2`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full text-f0-special-highlight h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all variants 3`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-f0-background-positive-bold text-f0-foreground-inverse h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all variants 4`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-f0-icon-critical text-f0-foreground-inverse h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - all variants 5`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-f0-background-warning-bold text-f0-foreground-inverse h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`F0Badge Snapshot - default 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight="100%"
  bbWidth="100%"
  className="stroke-sm flex shrink-0 items-center justify-center rounded-full bg-transparent text-f0-icon h-5 w-5"
  fill="none"
  focusable={false}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      [
        {},
      ],
      {
        "flex": 0,
        "height": "100%",
        "width": "100%",
      },
    ]
  }
  vbHeight={24}
  vbWidth={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      [
        "fill",
      ]
    }
  >
    <RNSVGPath
      d="M12 5v14M12 12H5h14"
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
      propList={
        [
          "stroke",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "type": 2,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
